Added files via upload

--- a/ws-android/files/workspace/www/index.html
+++ b/ws-android/files/workspace/www/index.html
@@ -1,1 +1,3 @@
-Welcome to my Cloud 9 workspace
+Welcome to my Cloud 9 workspace<br>
+
+Your generated apk's are at <a href="my-apk/index.html">my-apk/index.html</a>
